fixed z-index

--- a/themes/difyTheme/static/css/custom.css
+++ b/themes/difyTheme/static/css/custom.css
@@ -70,7 +70,7 @@
   position: relative;
   text-align: center;
   overflow: hidden;
-  z-index: -1;
+  z-index: 0;
 }
 .featured-products h3 {
   font-family: "Dancing Script", cursive;
