--- a/themes/difyTheme/static/scss/_components/_featuredProducts.scss
+++ b/themes/difyTheme/static/scss/_components/_featuredProducts.scss
@@ -5,7 +5,7 @@
   position: relative;
   text-align: center;
   overflow: hidden;
-  z-index: -1;
+  z-index: 0;
   h3 {
     font-family: "Dancing Script", cursive;
     font-size: 3.5rem;
